--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
-        "vue-template-compiler": "^2.6.12",
-        "vue-loader": "^15.9.8"
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "jquery": "^3.6.0",
+        "vue-router": "^2.8.1"
     }
 }
